전시전 작품 삭제 API (#155)
* Feature: 전시전 아이템 삭제 로직

* Feature: 전시전 작품 삭제 API

* Fix: 200 to 204 for delete

* Swagger: 전시전 작품 삭제 성공 명세
